# mastering_agent

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  GITHUB_SETUP.md  INSTALL.md  LICENSE  README.md  SECURITY.md  make_synthetic_mix.py  pyproject.toml  requirements.txt  run_demo.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
assets/: make_social_preview.py
mastering_agent/: __init__.py  analysis.py  decision.py  dsp.py  orchestrator.py
tests/: conftest.py  test_analysis.py  test_decision.py  test_dsp.py  test_orchestrator.py
